Finished Chapter 30 / Chapter 31

--- a/Notes/Week9/week9.tex
+++ b/Notes/Week9/week9.tex
@@ -161,5 +161,28 @@
 
 
 
+\section{Chapter 31: Solids and Surface Chemistry}
+\emph{From \textcite{bib:McQuarrieSimon}.}
+\begin{itemize}
+    \item \marginnote{5/24:}\textcite{bib:McQuarrieSimon} covers the derivation of rate laws for surface-catalyzed reactions from class.
+    \item \textcite{bib:McQuarrieSimon} derives rate laws for bimolecular gas-phase reactions occurring via the \textbf{Langmuir-Hinshelwood mechanism} and \textbf{Eley-Rideal mechanism}.
+    \item \textcite{bib:McQuarrieSimon} covers surface structure, including SEM and LEED.
+    \item The activation barrier in nitrogen fixation is so high (owing to the BDE of \ce{N2}) that even though the reaction is exothermic, the reactant molecules can be stored together forever with no reaction ever taking place.
+    \begin{itemize}
+        \item On an iron surface, however, the BDE of \ce{N2} is approximately \SI{10}{\kilo\joule\per\mole}.
+    \end{itemize}
+    \item \textbf{Volcano curve}: A plot with a linear ascent and descent.
+    \item An example is the plot of the relative rates of ammonia synthesis for different transition metal catalysts, which peaks in the middle.
+    \begin{itemize}
+        \item The two forces at play in this particular plot are an increase in $d$ electrons decreasing the strength of the metal-nitrogen bond in adsorbed \ce{NH3} molecules, and an increase in $d$ electrons increasing the \ce{N2} BDE.
+    \end{itemize}
+    \item Surface orientation also affects reaction rate: A smooth 110 surface gives rise to a negligible yield of ammonia, while a rough 111 surface has the highest yield.
+    \begin{itemize}
+        \item This particular result steps from changes in the BDE of \ce{N2} across the types of surfaces.
+    \end{itemize}
+\end{itemize}
+
+
+
 
 \end{document}
