--- a/main.bib
+++ b/main.bib
@@ -70,3 +70,11 @@
     url          = {http://websites.umich.edu/~elements/03chap/html/collision/CSDErive2.htm},
     urldate      = {2022-05-18}
 }
+
+@online{bib:LinAlgNotes,
+    title        = {Chapter 10: {C}omplex Vectors and Matrices},
+    author       = {Steven Labalme},
+    year         = {2020},
+    url          = {https://github.com/shadypuck/LinAlgNotes/blob/master/Chapter%2010/Chapter10.pdf},
+    urldate      = {2022-05-24}
+}
