--- a/preamble.tex
+++ b/preamble.tex
@@ -40,9 +40,12 @@
 
 \externaldocument{notes}
 
+\sisetup{range-phrase=-,range-units=single}
 \DeclareSIUnit{\angstrom}{\textup{\AA}}
 \DeclareSIUnit{\molar}{M}
 \DeclareSIUnit{\molecule}{molecule}
+\DeclareSIUnit{\atmosphere}{atm}
+\DeclareSIUnit{\torr}{torr}
 
 \addbibresource{../main.bib}
 \DefineBibliographyStrings{english}{bibliography={References}}
